# legatus

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
examples/echo_server/: main.cpp
include/axle/: event.h  socket.h  status.h  tcp.h
include/legatus/: status.h
include/legatus/io/: event.h  socket.h
src/: axle.cpp  axle.h  event.cpp  legatus.cpp  legatus.h  log.h  socket.cpp  version.cpp.in  version.h  version.h.in
src/io/: event.cpp  socket.cpp
test/: axle_test.cpp  event_test.cpp  legatus_test.cpp  status_test.cpp
test/io/: event_test.cpp
tools/: install-deps.sh  setup-darwin.sh
